Fixed overflowX by adding it to nav for mobile. Body with same attribute did not work on its own.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -243,6 +243,7 @@ right: 7%;
 
   nav {
     justify-content: flex-end;
+    overflow-x: hidden !important;
   }
 
   .navbar li {
